--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -33,7 +33,19 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it and copies all sources into ZIP file for submitting for analysis. Replace this section with your applications build steps
     - uses: actions/checkout@v3
       with:
-        repository: ''
+        repository: './frontend'
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ secrets.NODE_VERSION }}
+        cache: 'npm'
+
+    - name: npm install, build, and test
+      run: |
+        npm install
+        npm run build --if-present
+        npm run test --if-present
 
     - run: zip -r veracode-scan-target.zip ./
 
