--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -33,7 +33,7 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it and copies all sources into ZIP file for submitting for analysis. Replace this section with your applications build steps
     - uses: actions/checkout@v3
       with:
-        repository: './frontend'
+        repository: ''
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
