--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -50,7 +50,7 @@ jobs:
       working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
-    - run: npm run test --if-present
+    - run: npm test
       working-directory: ./frontend
 
     #- name: npm install, build, and test
