--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -44,9 +44,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        #cache: 'npm'
+        cache: 'npm'
 
-    - run: npm install
+    - run: npm ci
       working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
