--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -46,7 +46,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    - run: npm ci
+    - run: npm install
       working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
