--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -44,14 +44,14 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        #cache: 'npm'
 
     - run: npm install
       working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
-    - run: npm test
-      working-directory: ./frontend
+    #- run: npm test
+      #working-directory: ./frontend
 
     #- name: npm install, build, and test
       #run: |
