--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -37,31 +37,24 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it and copies all sources into ZIP file for submitting for analysis. Replace this section with your applications build steps
     - uses: actions/checkout@v3
       with:
-        #path: frontend
         repository: ''
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        #cache: 'npm'
+        cache: 'npm'
 
     - run: npm install
-      working-directory: ./backend
+      working-directory: ./frontend
     #- run: npx browserslist@latest --update-db
-      #working-directory: ./backend
+      #working-directory: ./frontend
     - run: npm run build --if-present
-      working-directory: ./backend
+      working-directory: ./frontend
     #- run: npm test
       #working-directory: ./frontend
 
-    #- name: npm install, build, and test
-      #run: |
-        #npm install
-        #npm run build --if-present
-        #npm run test --if-present
-
-    - run: zip -r veracode-scan-target-backend.zip ./
+    - run: zip -r veracode-scan-target-frontend.zip ./
 
     # download the Veracode Static Analysis Pipeline scan jar
     - run: curl --silent --show-error --fail -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
@@ -71,7 +64,7 @@ jobs:
       with:
         java-version: 8
         distribution: 'temurin'
-    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file veracode-scan-target-backend.zip
+    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file veracode-scan-target-frontend.zip
       continue-on-error: true
     - name: Convert pipeline scan output to SARIF format
       id: convert
