--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -51,8 +51,8 @@ jobs:
       #working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
-    #- run: npm test
-      #working-directory: ./frontend
+    - run: npm test
+      working-directory: ./frontend
 
     - run: zip -r veracode-scan-target-frontend.zip ./
 
