--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -47,12 +47,12 @@ jobs:
 
     - run: npm install
       working-directory: ./frontend
-    #- run: npx browserslist@latest --update-db
-      #working-directory: ./frontend
+    - run: npx browserslist@latest --update-db
+      working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
-    - run: npm test
-      working-directory: ./frontend
+    #- run: npm test
+      #working-directory: ./frontend
 
     - run: zip -r veracode-scan-target-frontend.zip ./
 
